# khora-world-cup

./: .env.example  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
config/: worldcup_expertise.yaml
khora_wc/: app.py  config.py  contract.py  expertise.py  khora_client.py  runtime.py
khora_wc/ingest/lineup/: __init__.py  client.py  fetch.py  transform.py
khora_wc/ingest/match/: __init__.py  client.py  fetch.py  transform.py
khora_wc/ingest/news/: __init__.py  enrich.py  fetch.py  gdelt.py  google_news.py  newsdata.py  rss.py  transform.py
khora_wc/ingest/squads/: __init__.py  transform.py  wikipedia.py
khora_wc/ingest/wiki/: __init__.py  crawl.py  fetch.py  mediawiki.py  transform.py
khora_wc/read/: agent.py  api.py  serialize.py
khora_wc/remember/: watcher.py
scripts/: fetch_lineups.py  fetch_matches.py  fetch_news.py  fetch_squads.py  fetch_wiki.py  reset_store.py  run_app.py  run_watcher.py  smoke_test.py  status.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: AnswerCard.tsx  Chip.tsx  EmptyState.tsx  ErrorCard.tsx  Footer.tsx  Header.tsx  LoadingCard.tsx  Markdown.tsx  MetricsStrip.tsx  QuestionBox.tsx  RecallTrace.tsx  ScoreBar.tsx  StatsBar.tsx
web/src/lib/: api.ts  format.ts  mock.ts  types.ts
