[project]
name = "khora-world-cup"
version = "0.1.0"
description = "FIFA World Cup 2026 knowledge PoC powered by khora"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "feedparser>=6.0.12",
    "khora[embedded]>=0.20.0",
    "pydantic-ai-slim[openai]>=1.107.0",
    "trafilatura>=2.1.0",
    "uvicorn[standard]>=0.49.0",
]
